fixed alignment in mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,10 @@ header {
 }
 
 @media only screen and (max-width: 800px){
+    header {
+        justify-content: center;
+    }
+
     .about-me {
         align-items: center;
         padding: 5%;
